--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    shiny, 
-    golem
+    shiny,
+    golem,
+    purrr,
+    dplyr
 RoxygenNote: 7.0.2
