Added the ability to load multiple csv files at once and merge into one dataframe.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(are_df_names_valid)
 export(is_df_continuous)
 export(is_valid_df)
 export(load_csv)
+export(load_excel)
 export(load_r_file)
 export(load_user_data)
 export(merge_user_data)
@@ -18,7 +19,9 @@ importFrom(dplyr,select)
 importFrom(golem,with_golem_options)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
+importFrom(purrr,pmap)
 importFrom(purrr,reduce)
+importFrom(purrr,set_names)
 importFrom(shiny,NS)
 importFrom(shiny,fileInput)
 importFrom(shiny,shinyApp)
