Added the dashboard layout back and separated out the Sara's css.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(mod_load_data_server)
 export(mod_load_data_ui)
 export(run_app)
 import(shiny)
+import(shinydashboard)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,full_join)
 importFrom(dplyr,select)
