--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,16 +14,25 @@ export(mod_load_data_ui)
 export(run_app)
 import(shiny)
 import(shinydashboard)
+importFrom(DT,DTOutput)
+importFrom(DT,renderDT)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,full_join)
 importFrom(dplyr,select)
+importFrom(glue,glue)
 importFrom(golem,with_golem_options)
+importFrom(htmltools,HTML)
+importFrom(htmltools,tagAppendAttributes)
+importFrom(htmltools,tagList)
+importFrom(htmltools,tags)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
 importFrom(shiny,NS)
+importFrom(shiny,actionButton)
+importFrom(shiny,column)
 importFrom(shiny,fileInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
