Implemented adding a dataset to an existing loaded dataset.
Also added a download button to take a copy of the displayed dataframe.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,11 +31,11 @@ importFrom(purrr,pmap)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
 importFrom(shiny,NS)
-importFrom(shiny,actionButton)
 importFrom(shiny,column)
 importFrom(shiny,fileInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
+importFrom(shinyWidgets,switchInput)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(vroom,vroom)
