--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(load_user_data)
 export(merge_user_data)
 export(mod_load_data_server)
 export(mod_load_data_ui)
+export(mod_plot_data_server)
+export(mod_plot_data_ui)
 export(run_app)
 import(shiny)
 import(shinydashboard)
@@ -31,7 +33,10 @@ importFrom(purrr,pmap)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
 importFrom(shiny,NS)
+importFrom(shiny,actionButton)
 importFrom(shiny,column)
+importFrom(shiny,downloadButton)
+importFrom(shiny,downloadHandler)
 importFrom(shiny,fileInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
