Some docs changes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(are_df_names_valid)
+export(df_to_dygraph)
 export(is_df_continuous)
 export(is_valid_df)
 export(load_csv)
@@ -21,6 +22,8 @@ importFrom(DT,renderDT)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,full_join)
 importFrom(dplyr,select)
+importFrom(dygraphs,dygraph)
+importFrom(dygraphs,renderDygraph)
 importFrom(glue,glue)
 importFrom(golem,with_golem_options)
 importFrom(htmltools,HTML)
@@ -38,8 +41,11 @@ importFrom(shiny,column)
 importFrom(shiny,downloadButton)
 importFrom(shiny,downloadHandler)
 importFrom(shiny,fileInput)
+importFrom(shiny,renderUI)
+importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
+importFrom(shiny,uiOutput)
 importFrom(shinyWidgets,switchInput)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
