Added dygraph output.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export("%>%")
 export(are_df_names_valid)
-export(df_to_dygraph)
+export(df_to_xts)
 export(is_df_continuous)
 export(is_valid_df)
 export(load_csv)
@@ -22,7 +22,10 @@ importFrom(DT,renderDT)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,full_join)
 importFrom(dplyr,select)
+importFrom(dygraphs,dyLegend)
+importFrom(dygraphs,dyRangeSelector)
 importFrom(dygraphs,dygraph)
+importFrom(dygraphs,dygraphOutput)
 importFrom(dygraphs,renderDygraph)
 importFrom(glue,glue)
 importFrom(golem,with_golem_options)
@@ -50,3 +53,5 @@ importFrom(shinyWidgets,switchInput)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(vroom,vroom)
+importFrom(xts,xts)
+importFrom(zoo,as.yearqtr)
