Added dygraph and variable selectors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(are_df_names_valid)
 export(df_to_xts)
 export(is_df_continuous)
+export(is_row_index_unique)
 export(is_valid_df)
 export(load_csv)
 export(load_excel)
@@ -20,14 +21,17 @@ import(shinydashboard)
 importFrom(DT,DTOutput)
 importFrom(DT,renderDT)
 importFrom(assertthat,assert_that)
+importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,select)
+importFrom(dplyr,transmute)
 importFrom(dygraphs,dyLegend)
 importFrom(dygraphs,dyRangeSelector)
 importFrom(dygraphs,dygraph)
 importFrom(dygraphs,dygraphOutput)
 importFrom(dygraphs,renderDygraph)
 importFrom(glue,glue)
+importFrom(glue,glue_data)
 importFrom(golem,with_golem_options)
 importFrom(htmltools,HTML)
 importFrom(htmltools,tagAppendAttributes)
