Added code to add column source to duplicated columns when merging rather than using default of x and y.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
@@ -54,8 +55,11 @@ importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(shiny,uiOutput)
 importFrom(shinyWidgets,switchInput)
+importFrom(tibble,as_tibble)
+importFrom(tidyr,separate)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(vroom,vroom)
 importFrom(xts,xts)
 importFrom(zoo,as.yearqtr)
+importFrom(zoo,index)
