Removed r loading code. Added Excel load code.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(is_row_index_unique)
 export(is_valid_df)
 export(load_csv)
 export(load_excel)
-export(load_r_file)
 export(load_user_data)
 export(merge_user_data)
 export(mod_load_data_server)
@@ -38,6 +37,7 @@ importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(magrittr,"%>%")
+importFrom(openxlsx,read.xlsx)
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
