February update to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,13 @@
 
 export("%>%")
 export(are_df_names_valid)
+export(df_to_ts)
 export(df_to_xts)
+export(fit_decomp)
+export(fit_holtwinters)
+export(fit_linear)
+export(fit_models)
+export(fit_naive)
 export(is_df_continuous)
 export(is_row_index_unique)
 export(is_valid_df)
@@ -15,6 +21,7 @@ export(mod_load_data_server)
 export(mod_load_data_ui)
 export(mod_plot_data_server)
 export(mod_plot_data_ui)
+export(predict_models)
 export(run_app)
 import(shiny)
 import(shinydashboard)
@@ -30,6 +37,9 @@ importFrom(dygraphs,dyRangeSelector)
 importFrom(dygraphs,dygraph)
 importFrom(dygraphs,dygraphOutput)
 importFrom(dygraphs,renderDygraph)
+importFrom(forecast,forecast)
+importFrom(forecast,naive)
+importFrom(forecast,tslm)
 importFrom(glue,glue)
 importFrom(glue,glue_data)
 importFrom(golem,with_golem_options)
@@ -54,6 +64,10 @@ importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(shiny,uiOutput)
 importFrom(shinyWidgets,switchInput)
+importFrom(stats,HoltWinters)
+importFrom(stats,stl)
+importFrom(stats,ts)
+importFrom(stats,window)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,separate)
 importFrom(tools,file_ext)
