--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(fit_holtwinters)
 export(fit_linear)
 export(fit_models)
 export(fit_naive)
+export(get_forecast_plotdata)
+export(get_proj_data)
 export(is_df_continuous)
 export(is_row_index_unique)
 export(is_valid_df)
@@ -21,6 +23,7 @@ export(mod_load_data_server)
 export(mod_load_data_ui)
 export(mod_plot_data_server)
 export(mod_plot_data_ui)
+export(plot_forecast)
 export(predict_models)
 export(run_app)
 import(shiny)
@@ -28,8 +31,13 @@ import(shinydashboard)
 importFrom(DT,DTOutput)
 importFrom(DT,renderDT)
 importFrom(assertthat,assert_that)
+importFrom(config,get)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
+importFrom(dplyr,n)
+importFrom(dplyr,one_of)
 importFrom(dplyr,select)
 importFrom(dplyr,transmute)
 importFrom(dygraphs,dyLegend)
@@ -48,6 +56,10 @@ importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(magrittr,"%>%")
+importFrom(plotly,add_trace)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
+importFrom(plotly,plotlyOutput)
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
@@ -65,10 +77,13 @@ importFrom(shiny,tagList)
 importFrom(shiny,uiOutput)
 importFrom(shinyWidgets,switchInput)
 importFrom(stats,HoltWinters)
+importFrom(stats,diffinv)
 importFrom(stats,stl)
 importFrom(stats,ts)
+importFrom(stats,ts.union)
 importFrom(stats,window)
 importFrom(tibble,as_tibble)
+importFrom(tibble,rownames_to_column)
 importFrom(tidyr,separate)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
