--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(mod_load_data_server)
 export(mod_load_data_ui)
 export(mod_plot_data_server)
 export(mod_plot_data_ui)
+export(mod_review_forecasts_ui)
 export(plot_forecast)
 export(predict_models)
 export(run_app)
