--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,11 @@ export(fit_holtwinters)
 export(fit_linear)
 export(fit_models)
 export(fit_naive)
-export(get_forecast_plotdata)
-export(get_proj_data)
 export(get_cv_error)
+export(get_forecast_plotdata)
 export(get_model_formula)
+export(get_proj_data)
+export(get_starting_values)
 export(is_df_continuous)
 export(is_row_index_unique)
 export(is_valid_df)
@@ -28,9 +29,10 @@ export(mod_load_data_ui)
 export(mod_plot_data_server)
 export(mod_plot_data_ui)
 export(mod_review_forecasts_ui)
+export(model.from.regobject)
+export(outputs)
 export(plot_forecast)
 export(predict_models)
-export(model.from.regobject)
 export(run_app)
 import(ggplot2)
 import(lattice)
@@ -40,12 +42,11 @@ importFrom(DT,DTOutput)
 importFrom(DT,renderDT)
 importFrom(MASS,stepAIC)
 importFrom(assertthat,assert_that)
-importFrom(config,get)
-importFrom(dplyr,arrange)
-importFrom(dplyr,bind_cols)
 importFrom(caret,train)
 importFrom(caret,trainControl)
 importFrom(config,get)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,n)
@@ -74,12 +75,11 @@ importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(leaps,regsubsets)
 importFrom(magrittr,"%>%")
+importFrom(openxlsx,read.xlsx)
 importFrom(plotly,add_trace)
+importFrom(plotly,ggplotly)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
-importFrom(plotly,plotlyOutput)
-importFrom(openxlsx,read.xlsx)
-importFrom(plotly,ggplotly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(purrr,map)
