Updated code for fct_subset.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ importFrom(stats,ts.union)
 importFrom(stats,window)
 importFrom(tibble,as_tibble)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
