--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(model.from.regobject)
 export(plot_forecast)
 export(predict_models)
 export(run_app)
+import(ggfortify)
 import(ggplot2)
 import(lattice)
 import(shiny)
@@ -68,6 +69,7 @@ importFrom(ggplot2,ggplot)
 importFrom(glue,glue)
 importFrom(glue,glue_data)
 importFrom(golem,with_golem_options)
+importFrom(gridExtra,grid.arrange)
 importFrom(htmltools,HTML)
 importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagList)
@@ -82,6 +84,7 @@ importFrom(plotly,plot_ly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
