--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_forecast_plotdata)
 export(get_model_formula)
 export(get_proj_data)
 export(get_starting_values)
+export(ifelsefun)
 export(is_df_continuous)
 export(is_row_index_unique)
 export(is_valid_df)
@@ -30,6 +31,7 @@ export(mod_plot_data_server)
 export(mod_plot_data_ui)
 export(mod_review_forecasts_ui)
 export(model.from.regobject)
+export(model_equation)
 export(plot_forecast)
 export(predict_models)
 export(run_app)
@@ -47,8 +49,10 @@ importFrom(caret,trainControl)
 importFrom(config,get)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
+importFrom(dplyr,if_else)
 importFrom(dplyr,n)
 importFrom(dplyr,one_of)
 importFrom(dplyr,select)
