Redone the code to fit the Golem framework via imports.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ import(shinydashboard)
 importFrom(DT,DTOutput)
 importFrom(DT,renderDT)
 importFrom(MASS,stepAIC)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(assertthat,assert_that)
 importFrom(caret,train)
 importFrom(caret,trainControl)
@@ -56,6 +57,7 @@ importFrom(dplyr,if_else)
 importFrom(dplyr,n)
 importFrom(dplyr,one_of)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,transmute)
 importFrom(dygraphs,dyLegend)
 importFrom(dygraphs,dyRangeSelector)
@@ -79,6 +81,9 @@ importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(leaps,regsubsets)
+importFrom(lubridate,quarter)
+importFrom(lubridate,year)
+importFrom(lubridate,yq)
 importFrom(magrittr,"%>%")
 importFrom(openxlsx,read.xlsx)
 importFrom(plotly,add_trace)
@@ -117,7 +122,9 @@ importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
+importFrom(tools,toTitleCase)
 importFrom(vroom,vroom)
 importFrom(xts,xts)
 importFrom(zoo,as.yearqtr)
 importFrom(zoo,index)
+importFrom(zoo,na.trim)
