--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(shiny,uiOutput)
+importFrom(shinyWidgets,sliderTextInput)
 importFrom(shinyWidgets,switchInput)
 importFrom(stats,HoltWinters)
 importFrom(stats,diffinv)
