--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,if_else)
 importFrom(dplyr,n)
 importFrom(dplyr,one_of)
+importFrom(dplyr,relocate)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,transmute)
