Testing adding spinner.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ importFrom(shiny,tagList)
 importFrom(shiny,uiOutput)
 importFrom(shinyWidgets,sliderTextInput)
 importFrom(shinyWidgets,switchInput)
+importFrom(shinycssloaders,withSpinner)
 importFrom(stats,HoltWinters)
 importFrom(stats,diffinv)
 importFrom(stats,stl)
