update renv snaphot with caret, openxlsx & shinycssloaders

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,5 +28,8 @@ Imports:
     plotly,
     tidyr,
     gridExtra,
-    ggfortify
+    ggfortify,
+    caret,
+    openxlsx,
+    shinycssloaders
 RoxygenNote: 7.1.1
