move plot cormat code to fct_cormat stage 1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(mod_plot_data_ui)
 export(mod_review_forecasts_ui)
 export(model.from.regobject)
 export(model_equation)
+export(plot_cormat)
 export(plot_forecast)
 export(predict_models)
 export(run_app)
