--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,5 +32,9 @@ Imports:
     caret,
     openxlsx,
     shinycssloaders,
-    reshape2
+    reshape2,
+    processx
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
