--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,7 @@ importFrom(stats,ts.union)
 importFrom(stats,window)
 importFrom(tibble,as_tibble)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tools,file_ext)
