add mod_features and still running fine

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(load_user_data)
 export(merge_user_data)
 export(mod_best_subset_server)
 export(mod_best_subset_ui)
+export(mod_features_server)
+export(mod_features_ui)
 export(mod_load_data_server)
 export(mod_load_data_ui)
 export(mod_plot_data_server)
@@ -39,6 +41,7 @@ export(run_app)
 import(ggfortify)
 import(ggplot2)
 import(lattice)
+import(recipes)
 import(shiny)
 import(shinydashboard)
 importFrom(DT,DTOutput)
